Fixed main menu, implemented merge and radix-sort.

--- a/src/no/martr/todo
+++ b/src/no/martr/todo
@@ -1,12 +1,10 @@
-Get input:
-    - length of array;
-    - sorting method
-    - execute OR calculate constant
-    - exit
+int sortMethod;
+int[] A;
 
-    while not exit
-        if execute
-            run selected sort(array)
-            show time
-        else if calculate
-            run calculate constant
+
+MainMenu()
+    sortMethod = 1-4
+    MakeArray()
+        A = array()
+        chooseAction
+
